--- a/package.json
+++ b/package.json
@@ -7,30 +7,34 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "render-build": "npm run build",
+    "render-postbuild": "npm run build",
+    "serve": "node server.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.20",
     "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
     "@mui/x-date-pickers": "^6.18.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "date-fns": "^2.30.0",
+    "express": "^4.21.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "date-fns": "^2.30.0"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
-    "@types/react-beautiful-dnd": "^13.1.8"
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-dom": "^18.2.17"
   },
   "browserslist": {
     "production": [
